Replace deprecated constructors.